# competitor_number_processing

./: .gitignore  Makefile  README.md  main.py  main_old.py  pipeline.yaml  poster.html  pyproject.toml  requirements.txt  sprawozdanie_cnn.ipynb  test_number_full_image.py  test_number_regions.py  tracking.json  train_digit_classifier.py
competitor_number_processing/: __init__.py  cnn_detector.py  detector.py  digit_classifier.py  inference.py  ocr.py  ocr_training.py  preprocess.py  tracking.py  training.py
models/: digit_classifier.pkl  digit_classifier_svm.xml
pipeline/: __init__.py  config.py  dataset_preparation.py
scripts/: example_roboflow_download.py  reset_preprocessing_tracking.py  sync_analysis.py  sync_cleanup.py  test_pipeline_e2e.py  upload_to_roboflow.py  validate_ocr.py
secrets/: config.example.json
src/: __init__.py  drive_uploader.py  main_gui.py  search.py  tracker.py
src/bib/: README.md  __init__.py  preprocess.py
src/drive_download/: conf.py  drive_downloader.py
src/pipeline/: __init__.py  __main__.py  cli.py  steps.py
tools/drive_manager/: pyproject.toml
tools/drive_manager/drive_manager/: __init__.py  manager.py
tools/image_search/: pyproject.toml
tools/image_search/image_search/: __init__.py  tracker.py
tools/images_collector/: pyproject.toml
tools/images_collector/images_collector/: __init__.py  gui.py  main.py
tools/images_deduplicator/: README.md  pyproject.toml
tools/images_deduplicator/images_deduplicator/: __init__.py  cli.py  deduplicator.py
tools/roboflow_manager/: README.md  pyproject.toml
tools/roboflow_manager/roboflow_manager/: __init__.py  client.py
