[project]
name = "competitor_number_processing"
version = "0.1.0"
description = "Competitor number processing package for extracting numbers from sports event images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0.0",
    "images_collector",
    "images_deduplicator",
    "drive_manager",
]

[project.scripts]
images_collector = "images_collector.main:main"
deduplicator = "images_deduplicator.cli:main"
process = "main:main"

[tool.uv.sources]
images_collector = { path = "./tools/images_collector", editable = true }
images_deduplicator = { path = "./tools/images_deduplicator", editable = true }
drive_manager = { path = "./tools/drive_manager", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
