[project]
name = "roboflow_manager"
version = "0.1.0"
description = "Roboflow dataset manager for downloading and managing annotated datasets"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "roboflow>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
